// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render hotspots correctly 1`] = `
<div
  aria-label="Reduce the number of conditional operators (4) used in the expression"
  className="issue hotspot selected"
  onClick={[Function]}
  role="region"
>
  <IssueTitleBar
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [],
        "flowsWithType": Array [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "SECURITY_HOTSPOT",
      }
    }
    togglePopup={[MockFunction]}
  />
  <IssueActionsBar
    className="padded-left"
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [],
        "flowsWithType": Array [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "SECURITY_HOTSPOT",
      }
    }
    onAssign={[MockFunction]}
    onChange={[MockFunction]}
    togglePopup={[MockFunction]}
  />
</div>
`;

exports[`should render issues correctly 1`] = `
<div
  aria-label="Reduce the number of conditional operators (4) used in the expression"
  className="issue selected"
  onClick={[Function]}
  role="region"
>
  <IssueTitleBar
    issue={
      Object {
        "actions": Array [],
        "comments": Array [
          Object {
            "author": "admin",
            "authorActive": true,
            "authorAvatar": "admin-avatar",
            "authorLogin": "admin",
            "authorName": "Admin",
            "createdAt": "2017-07-05T09:33:29+0200",
            "htmlText": "My comment",
            "key": "1",
            "markdown": "My comment",
            "updatable": false,
          },
        ],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [],
        "flowsWithType": Array [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    togglePopup={[MockFunction]}
  />
  <IssueActionsBar
    className="padded-left"
    issue={
      Object {
        "actions": Array [],
        "comments": Array [
          Object {
            "author": "admin",
            "authorActive": true,
            "authorAvatar": "admin-avatar",
            "authorLogin": "admin",
            "authorName": "Admin",
            "createdAt": "2017-07-05T09:33:29+0200",
            "htmlText": "My comment",
            "key": "1",
            "markdown": "My comment",
            "updatable": false,
          },
        ],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [],
        "flowsWithType": Array [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    onAssign={[MockFunction]}
    onChange={[MockFunction]}
    togglePopup={[MockFunction]}
  />
  <div
    className="issue-comments"
  >
    <IssueCommentLine
      comment={
        Object {
          "author": "admin",
          "authorActive": true,
          "authorAvatar": "admin-avatar",
          "authorLogin": "admin",
          "authorName": "Admin",
          "createdAt": "2017-07-05T09:33:29+0200",
          "htmlText": "My comment",
          "key": "1",
          "markdown": "My comment",
          "updatable": false,
        }
      }
      key="1"
      onDelete={[Function]}
      onEdit={[Function]}
    />
  </div>
</div>
`;
